# axum-graphql

./: Cargo.toml  prometheus.yaml  rust-toolchain.toml
src/: main.rs
src/model/: mod.rs
src/observability/: metrics.rs
src/routes/: mod.rs
